fix alignments

--- a/jira-plugin/src/content.scss
+++ b/jira-plugin/src/content.scss
@@ -12,19 +12,15 @@ body ._JX {
     background-color: #F2F8FA;
     padding: 10px 10px;
     border: 1px solid #dde4e6;
+    display: flex;
 
     &_user {
-      position: relative;
-      top: 1px;
-      right: 5px;
-      height: 0;
-      width: 22px;
-      left: -3px;
-
-      img {
-        width: 20px;
-        height: 20px;
-      }
+      width: 20px;
+      height: 20px;
+      margin-right: 6px;
+      margin-left: -3px;
+      align-self: center;
+      margin-top: -2px;
     }
 
     &_copy {
@@ -32,6 +28,8 @@ body ._JX {
       background-color: transparent;
       border: none;
       vertical-align: middle;
+      position: relative;
+      top: 2px;
 
       &:hover{
         color: #8993A4;
